fix: text alignment in course name column

--- a/frontend/src/styles/admin_page.scss
+++ b/frontend/src/styles/admin_page.scss
@@ -44,6 +44,9 @@
     }
     
     td {
+        :nth-child(1){
+            text-align: left;
+        };
         text-align: center;
         border-color: grey;
         border-collapse: collapse;
